Fix MyICount to count basic blocks in BigInteger