@@ -15,11 +15,11 @@ public class MyICount {
     private static Map counter = new HashMap();
     private static Map input = new HashMap();
     private static int b_count = 0, m_count = 0;
-    
+
     public static void main(String argv[]) {
-        
+
         ClassInfo ci = new ClassInfo("IntFactorization.class");
-		
+
         for (Enumeration e = ci.getRoutines().elements(); e.hasMoreElements(); ) {
             Routine routine = (Routine) e.nextElement();
 
@@ -28,48 +28,45 @@ public class MyICount {
             System.err.println("Method name: " + routine.getMethodName());
 
             routine.addAfter("MyICount", "printICount", routine.getMethodName());
-            
+
             for (Enumeration b = routine.getBasicBlocks().elements(); b.hasMoreElements(); ) {
                 BasicBlock bb = (BasicBlock) b.nextElement();
                 bb.addBefore("MyICount", "count", new Integer(1));
             }
         }
 
-        //ci.addAfter("MyICount", "printICount", ci.getClassName());
-
         String outputDir = (argv.length > 0) ? argv[0] : ".";
 
         ci.write(outputDir + System.getProperty("file.separator") + "IntFactorization.class");
-       
     }
-    
+
     public static synchronized void printICount(String foo) {
         //System.out.println(i_count + " instructions in " + b_count + " basic blocks were executed in " + m_count + " methods.");
         Long threadID = new Long(Thread.currentThread().getId());
-        Integer i_count = (Integer) counter.get(threadID);
-        if (i_count.equals("0") || i_count.equals("1")) {
-            counter.put(threadID, new Integer(0));
+
+        BigInteger i_count = (BigInteger) counter.get(threadID);
+        if (i_count.equals(new BigInteger("0")) || i_count.equals(new BigInteger("1"))) {
+            counter.put(threadID, new BigInteger("0"));
             return;
         }
-        try { 
-            //System.out.println("Did not write to DB: "+input.get(threadID)+" "+i_count);
-
+        try {
             DBWriter.write(""+input.get(threadID), ""+i_count);
         }catch (IOException e) {
             System.out.println("Failed to write to databaste");
             e.printStackTrace();
         }
-        counter.put(threadID, new Integer(0));
+
+        counter.put(threadID, new BigInteger("0"));
     }
-    
+
 
     public static synchronized void count(int incr) {
         Long threadID = new Long(Thread.currentThread().getId());
-        Integer current = (Integer) counter.get(threadID);
+        BigInteger current = (BigInteger) counter.get(threadID);
         if (current == null) {
-            current = new Integer(0);
+            current = new BigInteger("0");
         }
-        Integer newValue = new Integer(current.intValue() + incr);
+        BigInteger newValue = current.add(BigInteger.valueOf(incr));
         counter.put(threadID, newValue);
     }
 
@@ -81,6 +78,4 @@ public class MyICount {
         Long threadID = new Long(Thread.currentThread().getId());
         input.put(threadID, num);
     }
-
 }
-
